--- a/pageAccueil.html
+++ b/pageAccueil.html
@@ -21,16 +21,27 @@
         <img src="imageAccueil.jpg" alt="image d'Accueil qui montre les canadiens" width="100%" height="100%">
         <p style="font-size: 25px;font-weight:900;position: relative;left: 40px;">News</p>
         <hr style="width: 50%; margin-left: 40px; border: 1px solid darkgray;position: relative;top: -25px;">
+        
+        <div class="NewsBox">
+            <figure>
        <a href=""><img src="NewsMatchDesAnciens.jpg" alt="c'est un match des ancien entre les winipeg et les canadien "
-        width="400px" ></a>
-        <a href=""><img src="4nation.jpg" alt="articles des joueur pour les 4 nations"width="400px"></a>
-        <a href=""><img src="newspatinoir.jpg" alt="article sur le nouveau logo de la patinoir des canadiens"width="400px"></a>
-
+        width="500px" ></a>
+        <figcaption><a href="pageMatchdesancien.html" style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">Les anciens joueurs des Canadiens et des Jets s’affronteront à Winnipeg</a></figcaption>
+            </figure>
+            <figure>
+                <a href=""><img src="4nation.jpg" alt="articles des joueur pour les 4 nations"width="500px"></a>
+                <figcaption><a href="page4nations.html"style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">L’appel du devoir national</a></figcaption>
+            </figure>
+            <figure>
+        <a href=""><img src="newspatinoir.jpg" alt="article sur le nouveau logo de la patinoir des canadiens"width="500px"></a>
+        <figcaption><a href="pagenouveaulogo.html"style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">Les Canadiens dévoilent un nouveau logo au centre de la patinoire</a></figcaption>
+            </figure>
+       </div>
 
 
 
         <footer>
-
+            
         </footer>
     </body>
 </html>
