--- a/pageAccueil.html
+++ b/pageAccueil.html
@@ -17,30 +17,45 @@
             <a href="pageHistoire.html" class="HistoireBox"style="text-decoration: none; color: white ;">Histoire</a>
             <a href="pageContact.html" class="ContactBox"style="text-decoration: none; color: white ;">Contact</a>
         </header>
-
-        <img src="imageAccueil.jpg" alt="image d'Accueil qui montre les canadiens" width="100%" height="100%">
-        <p style="font-size: 25px;font-weight:900;position: relative;left: 40px;">News</p>
-        <hr style="width: 50%; margin-left: 40px; border: 1px solid darkgray;position: relative;top: -25px;">
-        
+        <main>
+    <section class="VideoBox">
+        <video src="videoDePresentation.mp4" autoplay muted playsinline loop></video>
+        <div class="DegraderBox"></div>
+        <div class="NewsTitle">
+        <h1>News</h1>
+         <hr >
+        </div>
+    </section>
+       <div class="LogoDegrader">
+    <img src="logoCanadien.png" alt="Logo" />
+</div>
+    <section class="NewsSection">
         <div class="NewsBox">
             <figure>
-       <a href=""><img src="NewsMatchDesAnciens.jpg" alt="c'est un match des ancien entre les winipeg et les canadien "
-        width="500px" ></a>
-        <figcaption><a href="pageMatchdesancien.html" style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">Les anciens joueurs des Canadiens et des Jets s’affronteront à Winnipeg</a></figcaption>
+         <a href="pageMatchdesancien.html"><img src="NewsMatchDesAnciens.jpg" width="500px"></a>
+              <figcaption>
+      <a href="pageMatchdesancien.html"style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">Les anciens joueurs des Canadiens et des Jets s’affronteront à Winnipeg</a>
+                </figcaption>
             </figure>
             <figure>
-                <a href=""><img src="4nation.jpg" alt="articles des joueur pour les 4 nations"width="500px"></a>
-                <figcaption><a href="page4nations.html"style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">L’appel du devoir national</a></figcaption>
+                <a href="page4nations.html"><img src="4nation.jpg" width="500px"></a>
+                <figcaption>
+           <a href="page4nations.html"style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">L’appel du devoir national</a>
+                </figcaption>
             </figure>
             <figure>
-        <a href=""><img src="newspatinoir.jpg" alt="article sur le nouveau logo de la patinoir des canadiens"width="500px"></a>
-        <figcaption><a href="pagenouveaulogo.html"style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">Les Canadiens dévoilent un nouveau logo au centre de la patinoire</a></figcaption>
+          <a href="pagenouveaulogo.html"><img src="newspatinoir.jpg" width="500px"></a>
+           <figcaption>
+   <a href="pagenouveaulogo.html"style="text-decoration: none;color: black; font-size: 20px;font-weight: 900;">Les Canadiens dévoilent un nouveau logo au centre de la patinoire</a>
+        </figcaption>
             </figure>
-       </div>
-
-
-
+        </div>
+    </section>
+</main>
         <footer>
+            <img src="logoCanadien.png" width="100" style="padding-right: 1250px;" alt="">
+           <p style="color: darkgray;font-size: 15px;width: 1000px;" class="FooterBox">canadiens.com est le site Web officiel du Club de hockey Canadien, Inc.. Les Canadiens de Montréal et canadiens.com sont des marques de commerce des Canadiens de Montréal, NHL, la marque verbale et l'image de la coupe Stanley sont des marques de commerce déposées et les logos NHL Shield et NHL Conference sont des marques de commerce de la Ligue nationale de hockey. Tous les logos et marques de la LNH ainsi que les logos et marques des équipes de la LNH illustrés sur ce site appartiennent à la LNH et aux équipes respectives de la LNH. Toute reproduction est interdite sans le consentement 
+            écrit préalable de NHL Enterprises, L.P. Copyright © 2025 Club de hockey Canadien, Inc. Tous droits réservés.</p>
             
         </footer>
     </body>
