--- a/pageEquipe.html
+++ b/pageEquipe.html
@@ -19,14 +19,23 @@
             <a href="pageContact.html" class="ContactBox"style="text-decoration: none; color: white ;">Contact</a>
         </header>
         <main>
-            <div class="fond">
+                <section class="VideoBox">
+        <img src="image/fondequipe.jpg" alt="">
+        <div class="NewsTitle">
+        <div class="Formation"> 
+        <h1>Formation</h1>
+        <hr style="margin-top: 1px;">
+        </div>
+        </div>
+    </section>
+           <div class="LogoDegrader">
+    <img src="image\logoCanadien.png" alt="Logo" />
+                                            </div>
             <div class="EquipeStyle">
                 <div class="Formation">
-            <h1>Formation</h1>
-            <hr>
-        </div>
-                    <h2 style="font-size: 35px;"><b>Attaquants</b></h2>
-                    <hr class="attaquants">
+                    <h1>Attaquants</h1>
+                    <hr >
+                    </div>
       <div class="player">
          <!---------------------------------------17-->
         <div class="playerBox">
@@ -286,8 +295,8 @@
             </div>
         </div>
       </div>
-                <div class="defenseurs">
-                    <h2><b>Défenseurs</b></h2>
+             <div class="Formation">
+                    <h1>Défenseurs</h1>
                     <hr>
                     </div>
       <div class="player">
@@ -404,8 +413,8 @@
             </div>
         </div>
       </div>
-                <div class="defenseurs">
-                    <h2><b>Gardiens</b></h2>
+                              <div class="Formation">
+                    <h1>Gardiens</h1>
                     <hr>
                     </div>
       <div class="player">
@@ -443,8 +452,7 @@
         </div>
       </div>
             </div>
-            </div>
-        </main>
+                    </main>
                 <footer>
             <img src="image\logoCanadien.png" width="100" style="padding-right: 1250px;" alt="logo des canadien en fin de page">
            <p style="color: darkgray;font-size: 15px;width: 1000px;" class="FooterBox">canadiens.com est le site Web officiel du Club de hockey Canadien, Inc.. Les Canadiens de Montréal et canadiens.com sont des marques de commerce des Canadiens de Montréal, NHL, la marque verbale et l'image de la coupe Stanley sont des marques de commerce déposées et les logos NHL Shield et NHL Conference sont des marques de commerce de la Ligue nationale de hockey. Tous les logos et marques de la LNH ainsi que les logos et marques des équipes de la LNH illustrés sur ce site appartiennent à la LNH et aux équipes respectives de la LNH. Toute reproduction est interdite sans le consentement 
