--- a/pageHistoire.html
+++ b/pageHistoire.html
@@ -19,6 +19,8 @@
             <a href="pageContact.html" class="ContactBox"style="text-decoration: none; color: white ;">Contact</a>
         </header>
         <main>
+            <div class="bande">
+            
             <div class="backgroundhistoire">
             <div class="titelhr">
             <h1>Histoire des Canadiens de Montréal</h1>
@@ -442,7 +444,7 @@
 
             </div>
 </div>
-
+           
         </main>
                         <footer>
             <img src="image\logoCanadien.png" width="100" style="padding-right: 1250px;" alt="logo des canadien en fin de page">
