--- a/pagetitre.html
+++ b/pagetitre.html
@@ -19,6 +19,19 @@
             <a href="pageContact.html" class="ContactBox"style="text-decoration: none; color: white ;">Contact</a>
         </header>
         <main>
+                            <section class="VideoBox">
+        <img src="image/walltrophy.jpg" style="z-index: -2;" alt="">
+                <div class="DegraderBox"></div>
+        <div class="NewsTitle">
+        <div class="Formation"> 
+        <h1 style="color: white;">Formation</h1>
+        <hr style="border-color: white; margin-top: 1px;">
+        </div>
+        </div>
+    </section>
+           <div class="LogoDegrader">
+    <img src="image\logoCanadien.png" alt="Logo" />
+                                            </div>
             <div class="dezoom">
             <!----------------------------------------------------------debut--coupe stanley------------->
          <div class="coupe">
@@ -136,6 +149,13 @@
                     <img class="photocoupe" src="image/coupe.png" alt="coupe Stanley">
                     <img class="logocoupe" src="image/enTeteLogo.png" alt="logo canadien">
                     <div class="annerBox">
+                        <p>1968</p>
+                    </div>
+                </div>
+                                                <div class="coupeBox">
+                    <img class="photocoupe" src="image/coupe.png" alt="coupe Stanley">
+                    <img class="logocoupe" src="image/enTeteLogo.png" alt="logo canadien">
+                    <div class="annerBox">
                         <p>1969</p>
                     </div>
                 </div>
@@ -164,6 +184,13 @@
                     <img class="photocoupe" src="image/coupe.png" alt="coupe Stanley">
                     <img class="logocoupe" src="image/enTeteLogo.png" alt="logo canadien">
                     <div class="annerBox">
+                        <p>1978</p>
+                    </div>
+                </div>
+                                                <div class="coupeBox">
+                    <img class="photocoupe" src="image/coupe.png" alt="coupe Stanley">
+                    <img class="logocoupe" src="image/enTeteLogo.png" alt="logo canadien">
+                    <div class="annerBox">
                         <p>1979</p>
                     </div>
                 </div>
@@ -179,20 +206,6 @@
                     <img class="logocoupe" src="image/enTeteLogo.png" alt="logo canadien">
                     <div class="annerBox">
                         <p>1993</p>
-                    </div>
-                </div>
-                                                <div class="coupeBox">
-                    <img class="photocoupe" src="image/coupe.png" alt="coupe Stanley">
-                    <img class="logocoupe" src="image/enTeteLogo.png" alt="logo canadien">
-                    <div class="annerBox">
-                        <p>1960</p>
-                    </div>
-                </div>
-                                                <div class="coupeBox">
-                    <img class="photocoupe" src="image/coupe.png" alt="coupe Stanley">
-                    <img class="logocoupe" src="image/enTeteLogo.png" alt="logo canadien">
-                    <div class="annerBox">
-                        <p>1960</p>
                     </div>
                 </div>
         </div>
