--- a/pageHistoire.html
+++ b/pageHistoire.html
@@ -18,8 +18,20 @@
             <a href="pageHistoire.html" class="HistoireBox"style="text-decoration: none; color: white ;">Histoire</a>
             <a href="pageContact.html" class="ContactBox"style="text-decoration: none; color: white ;">Contact</a>
         </header>
+        
         <main>
-            <div class="bande">
+                                        <section class="VideoBox" style="height: 600px;">
+        <img src="image/histoire.jpg" class="imageprest" alt="">
+                <div class="DegraderBox"></div>
+        <div class="NewsTitle">
+        <div class="Formation"> 
+        </div>
+        </div>
+    </section>
+           <div class="LogoDegrader">
+    <img src="image\logoCanadien.png" style="padding-bottom: 300px;"  alt="Logo" />
+                                            </div>
+          <!--<div class="bande"></div>--> 
             
             <div class="backgroundhistoire">
             <div class="titelhr">
