--- a/pagetitre.html
+++ b/pagetitre.html
@@ -20,11 +20,11 @@
         </header>
         <main>
                             <section class="VideoBox">
-        <img src="image/walltrophy.jpg" style="z-index: -2;" alt="">
+        <img src="image/walltrophy.jpg" class="imageprest" alt="">
                 <div class="DegraderBox"></div>
         <div class="NewsTitle">
         <div class="Formation"> 
-        <h1 style="color: white;">Formation</h1>
+        <h1 style="color: white;">All Award</h1>
         <hr style="border-color: white; margin-top: 1px;">
         </div>
         </div>
